force-app/main/default/objects/CommissionPayment__c/fields/CommissionRecord__c.field-meta.xml
<CustomField>
    <fullName>CommissionRecord__c</fullName>
    <label>Commission Record</label>
    <referenceTo>CommissionRecord__c</referenceTo>
    <relationshipLabel>Commission Payments</relationshipLabel>
    <relationshipName>CommissionPayments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>