force-app/main/default/objects/CommissionPayment__c/fields/LoggedInOwnerCheck__c.field-meta.xml
<CustomField>
    <fullName>LoggedInOwnerCheck__c</fullName>
    <formula>IF( Owner__c  = $User.Id , true , false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LoggedInOwnerCheck</label>
    <type>Checkbox</type>
</CustomField>